--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,15 +1,18 @@
-<div class="container-fluid">
-  <div class="row">
-    <h1>EAT-DA-BURGER!</h1>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">EAT-DA-BURGER!</h1>
+    <p class="lead">enter the names of your favorite burgers. click to devour them.</p>
   </div>
+</div>
+<div class="container-fluid">
   <div class="row">
     <div class="col-6">
       <h2>YOU NEED TO EAT THESE!</h2>
       <ul>
         {{#each burgers}}
-          {{#unless devoured}}
-            {{> burgers/burger-block eaten=true}}
-          {{/unless}}
+        {{#unless devoured}}
+        {{> burgers/burger-block eaten=true}}
+        {{/unless}}
         {{/each}}
       </ul>
     </div>
@@ -18,25 +21,31 @@
 
       <ul>
         {{#each burgers}}
-          {{#if devoured}}
-            {{> burgers/burger-block eaten=false}}
-          {{/if}}
+        {{#if devoured}}
+        {{> burgers/burger-block eaten=false}}
+        {{/if}}
         {{/each}}
       </ul>
     </div>
   </div>
   <div class="row">
-    <div class="col-12">
-    <h2>WHAT BURGER DO YOU WANT NOW?!</h2>
+    <div class="col-12" style="text-align: center;">
+      <h2>WHAT BURGER DO YOU WANT NOW?!</h2>
     </div>
-    <form class="create-form">
+  </div>
+  <div class="row">
+    <div class="container col-md-4 .offset-md-4" <form class="create-form">
 
       <div class="form-group">
         <label for="ca">Burger Name:</label>
         <input type="text" id="ca" burger_name="burger_name">
       </div>
-
-      <button type="submit">Add Burger</button>
-    </form>
+      <div class="row">
+        <div class="container col-md-4 .offset-md-5">
+          <button type="submit">Add Burger</button>
+        </div>
+      </div>
+      </form>
+    </div>
   </div>
 </div>
