--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,7 +1,7 @@
 <li>
 	{{burger_name}}
 	{{#if eaten}}
-	<button class="change-eaten" data-id="{{id}}" data-neweaten="{{eaten}}">EAT THIS</button>
+	<button class="change-eaten" data-id="{{id}}" data-neweaten="{{eaten}}">EAT THIS!</button>
 		<button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
 	{{else}}YOU
 	<button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
