--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,8 @@
 <div class="jumbotron jumbotron-fluid">
+
   <div class="container">
+    <img src="/assets/images/burger.png" style="max-width: 240px">
     <h1 class="display-4">EAT-DA-BURGER!</h1>
-    <p class="lead">enter the names of your favorite burgers. click to devour them.</p>
   </div>
 </div>
 <div class="container-fluid">
@@ -28,24 +29,21 @@
       </ul>
     </div>
   </div>
-  <div class="row">
+  <div class="row" style="margin-top: 4em;">
     <div class="col-12" style="text-align: center;">
       <h2>WHAT BURGER DO YOU WANT NOW?!</h2>
     </div>
   </div>
-  <div class="row">
-    <div class="container col-md-4 .offset-md-4" <form class="create-form">
+  <div class="row" style="margin-top: 1em;">
+    <form class="create-form"></form>
+    <div class="container col-md-4 offset-md-4 form-group">
 
-      <div class="form-group">
-        <label for="ca">Burger Name:</label>
-        <input type="text" id="ca" burger_name="burger_name">
-      </div>
-      <div class="row">
-        <div class="container col-md-4 .offset-md-5">
-          <button type="submit">Add Burger</button>
-        </div>
-      </div>
-      </form>
+      <label for="ca">Burger Name:</label>
+      <input type="text" id="ca" burger_name="burger_name">
     </div>
+    <div class="container col-md-4 offset-md-6" style="padding-left: .05em;">
+      <button type="submit">Add Burger</button>
+    </div>
+    </form>
   </div>
 </div>
