--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,9 +1,9 @@
 <li>
 	{{burger_name}}
 	{{#if eaten}}
-	<button class="change-eaten" data-id="{{id}}" data-neweaten="{{eaten}}">EAT THIS!</button>
+	<button class="change-eaten" data-id="{{id}}" data-neweaten="{{eaten}}">DEVOUR IT!</button>
 		<button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
-	{{else}}YOU
+	{{else}}
 	<button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
 	{{/if}}
 </li>
