--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,8 +34,9 @@
       <h2>WHAT BURGER DO YOU WANT NOW?!</h2>
     </div>
   </div>
+  <form class="create-form">
   <div class="row" style="margin-top: 1em;">
-    <form class="create-form"></form>
+
     <div class="container col-md-4 offset-md-4 form-group">
 
       <label for="ca">Burger Name:</label>
