--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -42,7 +42,7 @@
       <label for="ca">Burger Name:</label>
       <input type="text" id="ca" burger_name="burger_name">
     </div>
-    <div class="container col-md-4 offset-md-6" style="padding-left: .05em;">
+    <div class="container col-md-4 offset-md-6" style="padding-left: .05em; margin-bottom: 5em;">
       <button type="submit">Add Burger</button>
     </div>
     </form>
